# AI-Scientist-v2

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .releaserc.json  ARCHITECTURE.md  AUTONOMOUS_DEVELOPMENT_REPORT.md  AUTONOMOUS_DEVELOPMENT_STATUS_FINAL.md  AUTONOMOUS_SDLC_COMPLETE_GUIDE.md  AUTONOMOUS_SDLC_COMPLETE_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_COMPLETE_SUMMARY.md  AUTONOMOUS_SDLC_DEPLOYMENT_GUIDE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SYSTEM_README.md  BACKLOG.md  BACKLOG_UPDATED.md  BACKLOG_UPDATED_AUTONOMOUS.md  CHANGELOG.md  CI_CD_SETUP_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_WORKFLOWS_SETUP.md  IMPLEMENTATION_SUMMARY.md  MANUAL_SETUP_REQUIRED.md  MERGE_CONFLICT_RESOLUTION_SETUP.md  Makefile  PRODUCTION_DEPLOYMENT_COMPLETE.md  PROJECT_CHARTER.md  QUALITY_VALIDATION_SUMMARY.md  ROBUST_EXECUTION_ENGINE_REPORT.md  SDLC_IMPLEMENTATION_REPORT.md  (+89 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  (+3 more)
DOCS/: autonomous_development_session_report.md  autonomous_execution_loop.py  backlog.yml
ai_scientist/: adaptive_experiment_manager.py  advanced_monitoring.py  autonomous_sdlc_orchestrator.py  cli.py  cli_enterprise.py  cli_robust.py  cli_simple.py  distributed_computing_engine.py  dynamic_checkpoint_orchestrator.py  global_autonomous_system.py  global_compliance_orchestrator.py  intelligent_hypothesis_generator.py  llm.py  perform_icbinb_writeup.py  perform_writeup.py  quantum_autonomous_executor.py  quantum_quality_gates.py  research_orchestrator.py  robust_autonomous_orchestrator.py  robust_error_handling.py  robust_execution_engine.py  robust_quantum_orchestrator.py  robust_research_orchestrator.py  scalable_autonomous_orchestrator.py  scalable_execution_engine.py  scalable_quantum_optimizer.py  scalable_research_orchestrator.py  security_framework.py  simplified_autonomous_cli.py  unified_autonomous_executor.py  unified_research_framework.py  unified_research_orchestrator.py  vlm.py
config/: default.yaml
deployment/: README.md
docs/: BRANCH_PROTECTION_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_ACTIONS_SETUP.md  GOVERNANCE.md  ROADMAP.md  SDLC_OPTIMIZATION_REPORT.md  SETUP_REQUIRED.md  autonomous_backlog_management_guide.md  ci_supply_chain_security.md  configuration.md  disaster_recovery.md  subprocess_security.md
global_research_output/: research_report_de.md
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secrets.yaml  service.yaml
monitoring/: alerting_rules.yml  alerting_rules_advanced.yml  health_monitor.py  prometheus.yml
observability/: advanced-telemetry.yaml  opentelemetry-config.yaml
quality_reports/: quality_report_20250820_172203.json  quality_report_20250820_172245.json
quantum_task_planner/: __init__.py
repo_hygiene/: __init__.py  github_client.py
robust_research_output/: experiment_plan.json  experiment_results.json  research_ideas.json  research_report.md  research_topic.md
scalable_research_output/: experiment_plan.json  research_ideas.json  research_topic.md  scalable_research_report.md  validation_results.json
scripts/: automated_integration.py  build.py  changelog_automation.py  dependency_update.py  health_check.py  maintenance.py  release.py  repository_health_monitor.py  security_scan.py
security/: advanced_security_config.yml  compliance_checker.py  secrets_scanner.py  security_config.yaml
simple_research_output/: research_results_20250819_123149.json  research_results_20250819_123932.json  research_results_20250819_123934.json  research_results_20250819_123936.json  research_results_20250823_025754.json  research_results_20250823_025757.json  research_results_20250823_025759.json  research_results_20250823_025817.json  research_results_20250823_025819.json  research_results_20250823_025821.json  research_results_20250823_032002.json  research_results_20250823_032004.json  research_results_20250823_032006.json
terragon_autonomous_output/: research_cycle_computer_vision_20250820_171201.json  research_cycle_machine_learning_20250820_171151.json  research_cycle_machine_learning_20250820_171945.json  research_cycle_nlp_20250820_171158.json  research_cycle_quantum_computing_20250820_171154.json  research_suite_20250820_171201.json
terragon_robust_output/: robust_cycle_cycle_1755710139.json  robust_cycle_cycle_1755710140.json
terragon_scalable_output/: scalable_suite_scalable_suite_1755710262.json
test_output/: execution_results.json  experiment_plan.json  experiment_results.json  research_ideas.json  research_report.md  research_topic.md
tests/: README.md  __init__.py  conftest.py  test_anthropic_function_calling.py  test_api_key_security.py  test_api_key_security_enhancement.py  test_autonomous_sdlc_generations.py  test_basic_autonomous_sdlc.py  test_basic_functionality.py  test_code_security.py  test_config_management.py  test_configuration_management.py  test_configuration_management.py.backup  test_debug_error_handling.py  test_dependency_management.py  test_enhanced_error_handling.py  test_enterprise_integration.py  test_enterprise_simple.py  test_file_handle_leak_fix.py  test_gpu_manager_enhanced.py  test_gpu_manager_isolated.py  test_gpu_resource_management.py  test_input_validation_security.py  test_interpreter_timeout.py  test_llm_configuration_integration.py  test_llm_simple.py  test_nested_zip.py  test_path_security.py  test_process_cleanup_enhanced.py  test_security_fixes.py  test_security_integration.py  test_security_validation_simple.py  test_subprocess_security.py  test_timeout_fix.py  test_torch_compile_safety.py  test_torch_compile_safety_enhanced.py  test_utils.py  test_vlm_prepare_prompt.py
(+203 files in other folders)
